[package]
name = "vach-webrender"
version = "0.1.0"
edition = "2021"

[dependencies]
vach = { version = "0.4.5", features = ["archive"], default-features = false }
yew = { version = "0.20.0", features = ["csr"] }
web-sys = { version = "0.3.60", features = [
	"DataTransfer",
	"File",
	"FileList",
] }

wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"

js-sys = "0.3.60"
